Issue #3084571 by hansa11, Sreenivas Bttv, kiamlaluno: Mobile breakpoint footer region content alignment

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -62,4 +62,16 @@
       color: $pink;
     }
   }
+  .copyright,
+  .social-icons {
+    @include media-breakpoint-down(sm) {
+      margin: 0 auto;
+      text-align: center;
+    }
+  }
+  .copyright {
+    @include media-breakpoint-down(sm) {
+      padding-bottom: 10px;
+    }
+  }
 }
